# AudioServer

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum
cmd/AudioServer/: config.toml  main.go
cmd/jsonping/: main.go  test1.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  voice.json
cmd/keyboard/: go.mod  go.sum  main.go  util.go
cmd/mockserver/: main.go
cmd/testtool/: main.go
internal/api/: audio.go  routing.go  voice.go
internal/app/: app.go  root.go
internal/core/: core.go
internal/log/: backgroundwriter.go  backgroundwriter_test.go
internal/mux/: mux.go
internal/util/: backgroundwriter.go  backgroundwriter_test.go
pkg/com/: IAudioServer.go  IAudioServer_func.go  IAudioServer_windows.go  com_func.go  com_windows.go  constants.go  guid.go  iaudioclient_windows.go  iaudioserver.go  iaudioserver_func.go  iaudioserver_windows.go
pkg/types/: constants.go  types.go
src/: AudioServer.cpp  AudioServer.def  AudioServer.h  audiocore.cpp  audiocore.h  audioloop.cpp  audioloop.h  audiothread.cpp  audiothread.h  commandloop.cpp  commandloop.h  commandthread.cpp  commandthread.h  context.h  dllmain.cpp  global.cpp  loggingthread.cpp  loggingthread.h  logloop.cpp  logloop.h  notification.cpp  notification.h  renderthread.cpp  renderthread.h  resource.rc  sfxloop.cpp  sfxloop.h  sfxthread.cpp  sfxthread.h  types.h  util.cpp  util.h  voiceinfo.cpp  voiceinfo.h  voiceloop.cpp  voiceloop.h  voicethread.cpp  voicethread.h
tools/: build.bat  reg.bat  test.bash  test.bat  ureg.bat
(+4 files in other folders)
